# comp_club

./: CMakeLists.txt  Time.h  comp_club.h  comp_club_description_validator.cpp  comp_club_description_validator.h  comp_club_manger.cpp  comp_club_manger.h  comp_club_parser.cpp  comp_club_parser.h  event_id.h  helpers.cpp  helpers.h  main.cpp  readme.md  time_helpers.cpp  time_helpers.h  validator_time.cpp  validator_time.h
